--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@
 .AppleDouble
 .LSOverride
 
-# Icon must end with two \r
-Icon
-dataset/
-data/
+# datasets
+dataset/*
+data/*
 
 # Thumbnails
 *.csv
